# rust_task

geyser-sol-transfer/: Cargo.toml  build.rs  config.yaml
geyser-sol-transfer/src/: main.rs
solana-deposit/: build.sh  deploy.sh
solana-deposit/client/: Cargo.toml
solana-deposit/client/src/: main.rs
solana-deposit/contract/: Cargo.toml
solana-deposit/contract/src/: lib.rs
