[package]
name = "geyser-sol-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
solana-client = "1.17"
solana-sdk = "1.17"
bs58 = "0.5"
anyhow = "1.0"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"